src/objects/Promotion__c.object
<CustomObject>
    <fields>
        <fullName>ActionValidityEndDate__c</fullName>
        <label>ActionValidityEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActionValidityStartDate__c</fullName>
        <label>ActionValidityStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AdvertisingMaterial__c</fullName>
        <label>AdvertisingMaterial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttachmentId__c</fullName>
        <label>AttachmentId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <label>OldId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromotionType__c</fullName>
        <label>PromotionType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SellingValidityEndDate__c</fullName>
        <label>SellingValidityEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SellingValidityStartDate__c</fullName>
        <label>SellingValidityStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Promotion</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>